# conways_game_of_life

./: .gitignore  .project  CMakeLists.txt  README.md
Debug/: makefile
Debug/src/: subdir.mk
src/: gameoflife.cpp  gameoflife.h  gameoflife_test.cpp  gameoflife_test.h  main.cpp  main_auxiliary.cpp  main_auxiliary.h
src/renderingengine/: renderingengine.cpp  renderingengine.h
